Name:                lambda-ci
Version:             0.1
Description:         Lightweight continuous integration
License:             BSD3
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tomn@openbrain.org
build-type:          Simple
Cabal-Version:       >= 1.8

Executable lambda-ci
   Main-Is:        LambdaCi.hs
   ghc-options:    -threaded
   Build-depends:   base                     >= 4.6        && < 5
                  , scotty >= 0.6 && < 0.7
                  , text
                  , directory
                  , process
                  , stm
                  , mtl
                  , deepseq
                  , blaze-html
                  , blaze-markup
                  , time