Name:                makeci
Version:             0.1
Description:         Lightweight continuous integration
License:             BSD3
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tomn@openbrain.org
build-type:          Simple
Cabal-Version:       >= 1.8

Executable makeci
   Main-Is:        MakeCI.hs
   ghc-options:    -threaded
   Build-depends:   base                     >= 4.6        && < 5
                  , Spock == 0.4.2.0
                  , scotty
                  , text
                  , directory
                  , process
                  , stm
                  , mtl
                  , deepseq
                  , blaze-html
                  , blaze-markup
                  , time
                  , old-locale
                  , persistent
                  , persistent-sqlite 
                  , persistent-template
                  , resourcet
                  , monad-logger
                  , resource-pool
