Name:                makeci
Version:             0.1
Description:         Lightweight continuous integration
License:             BSD3
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tomn@openbrain.org
build-type:          Simple
Cabal-Version:       >= 1.8

Executable makeci
   Main-Is:        MakeCI.hs
   buildable:      False
   ghc-options:    -threaded
   Build-depends:   base                      >= 4.6        && < 5
                  , Spock >=  0.7.6
                  , Spock-worker >= 0.1.0.2
                  , text
                  , directory
                  , process
                  , stm
                  , mtl
                  , deepseq
                  , blaze-html
                  , blaze-markup
                  , time == 1.4.2
                  , old-locale
                  , persistent
                  , persistent-sqlite
                  , persistent-template
                  , resourcet == 1.1.3.3
                  , monad-logger
                  , resource-pool == 0.2.3.2
                  , pool-conduit == 0.1.2.3
                  , monad-control == 0.3.3.0
                  , aeson

Executable pkgmake
   Main-Is:        PkgMake.hs
   Build-depends:   base                     >= 4.6        && < 5
                  , makeci

library
  ghc-options:       -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      lib
  exposed-modules:     Makefiles
                     , Utils
                     , Build
  Build-depends:   base                     >= 4.6        && < 5
                  , text
                  , directory
                  , process
                  , stm
                  , mtl
                  , deepseq
                  , time == 1.4.2
                  , old-locale
                  , persistent
                  , persistent-sqlite
                  , persistent-template
                  , hashable