Name:                makeci
Version:             0.1
Description:         Lightweight continuous integration
License:             BSD3
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tomn@openbrain.org
build-type:          Simple
Cabal-Version:       >= 1.8

Executable makeci
   Main-Is:        MakeCI.hs
   ghc-options:    -threaded
   Build-depends:   base
                  , Spock
                  , Spock-worker
                  , scotty
                  , text
                  , directory
                  , process
                  , stm
                  , mtl
                  , deepseq
                  , blaze-html
                  , blaze-markup
                  , time
                  , old-locale
                  , persistent
                  , persistent-sqlite
                  , persistent-template
                  , resourcet
                  , monad-logger
                  , resource-pool
                  , pool-conduit
                  , aeson
                  , shelly
